--- a/src/app/modules/auth/sign-up/sign-up.component.html
+++ b/src/app/modules/auth/sign-up/sign-up.component.html
@@ -1,13 +1,8 @@
 <div class="flex flex-col sm:flex-row items-center md:items-start sm:justify-center md:justify-start flex-auto min-w-0">
     <div class="md:flex md:items-center md:justify-end w-full sm:w-auto md:h-full md:w-1/2 py-8 px-4 sm:p-12 md:p-16 sm:rounded-2xl md:rounded-none sm:shadow md:shadow-none sm:bg-card">
         <div class="w-full max-w-80 sm:w-80 mx-auto sm:mx-0">
-            <!-- Logo -->
-            <div class="w-12">
-                <img src="assets/images/logo/logo.svg">
-            </div>
-
-            <!-- Title -->
-            <div class="mt-8 text-4xl font-extrabold tracking-tight leading-tight">Sign up</div>
+           
+            <!-- Title --> 
             <div class="flex items-baseline mt-0.5 font-medium">
                 <div>Already have an account?</div>
                 <a
@@ -103,6 +98,12 @@
                     <mat-error *ngIf="signUpForm.get('cityId').hasError('required')">
                         City is required
                     </mat-error>
+                    </mat-form-field>
+
+                    <!-- Address -->
+                    <mat-form-field class="w-full">
+                        <mat-label>Address</mat-label>
+                        <input id="Address" matInput [formControlName]="'Address'">
                     </mat-form-field>
 
 
