--- a/src/app/modules/admin/user/user-form/user-form.component.html
+++ b/src/app/modules/admin/user/user-form/user-form.component.html
@@ -1,51 +1,103 @@
-<div class="max-w-2xl mx-auto mt-10 p-6 bg-white rounded shadow">
-  <h2 class="text-xl font-semibold mb-4">
-    {{ isEdit ? 'Edit User' : 'Create User' }}
-  </h2>
-
-  <form [formGroup]="userForm" (ngSubmit)="submit()">
-    <mat-form-field appearance="outline" class="w-full">
-      <mat-label>Full Name</mat-label>
-      <input matInput formControlName="fullName" />
-    </mat-form-field>
-
-    <mat-form-field appearance="outline" class="w-full">
-      <mat-label>Email</mat-label>
-      <input matInput formControlName="email" />
-    </mat-form-field>
-
-    <mat-form-field appearance="outline" class="w-full">
-      <mat-label>Role</mat-label>
-      <mat-select formControlName="role">
-        <mat-option *ngFor="let role of roles" [value]="role">{{ role }}</mat-option>
-      </mat-select>
-    </mat-form-field>
-
-    <!-- Business fields -->
-    <div *ngIf="userForm.value.role === 'Business'">
-      <mat-form-field appearance="outline" class="w-full">
-        <mat-label>Company Name</mat-label>
-        <input matInput formControlName="companyName" />
-      </mat-form-field>
-
-      <mat-form-field appearance="outline" class="w-full">
-        <mat-label>Tax ID</mat-label>
-        <input matInput formControlName="taxId" />
-      </mat-form-field>
-
-      <mat-form-field appearance="outline" class="w-full">
-        <mat-label>Contact Phone</mat-label>
-        <input matInput formControlName="contactPhone" />
-      </mat-form-field>
-
-      <mat-form-field appearance="outline" class="w-full">
-        <mat-label>Address</mat-label>
-        <input matInput formControlName="address" />
-      </mat-form-field>
-    </div>
-
-    <button mat-flat-button color="primary" class="mt-4" type="submit">
+<div class="p-6 w-full h-full">
+  <div class="bg-white shadow rounded-lg p-6 w-full h-full">
+    <h2 class="text-xl font-semibold mb-4">
       {{ isEdit ? 'Update User' : 'Create User' }}
-    </button>
-  </form>
+    </h2>
+
+     <form [formGroup]="userForm" (ngSubmit)="submit()" class="grid gap-4">
+      
+      <!-- First Name -->
+      <mat-form-field appearance="outline">
+        <mat-label>First Name*</mat-label>
+        <input matInput formControlName="firstName" />
+      </mat-form-field>
+
+      <!-- Last Name -->
+      <mat-form-field appearance="outline">
+        <mat-label>Last Name*</mat-label>
+        <input matInput formControlName="lastName" />
+      </mat-form-field>
+
+      <!-- Email -->
+      <mat-form-field appearance="outline">
+        <mat-label>Email*</mat-label>
+        <input matInput type="email" formControlName="email" />
+      </mat-form-field>
+
+      <!-- Phone -->
+      <mat-form-field appearance="outline">
+        <mat-label>Phone</mat-label>
+        <input matInput formControlName="phone" />
+      </mat-form-field>
+
+      <!-- Password -->
+      <mat-form-field appearance="outline">
+        <mat-label>Password*</mat-label>
+        <input matInput type="password" formControlName="password" />
+      </mat-form-field>
+
+      <!-- Confirm Password -->
+      <mat-form-field appearance="outline">
+        <mat-label>Confirm Password*</mat-label>
+        <input matInput type="password" formControlName="confirmPassword" />
+      </mat-form-field>
+
+      <!-- Role -->
+      <mat-form-field appearance="outline">
+        <mat-label>Role*</mat-label>
+        <mat-select formControlName="role">
+          <mat-option *ngFor="let role of roles" [value]="role.name">
+            {{ role.name }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+
+      <!-- Business Fields -->
+      <ng-container *ngIf="userForm.get('role')?.value === 'BusinessAdmin'">
+        <mat-form-field appearance="outline" class="col-span-3">
+          <mat-label>Company Name</mat-label>
+          <input matInput formControlName="companyName" />
+        </mat-form-field>
+
+   
+
+        <mat-form-field appearance="outline" class="col-span-3">
+          <mat-label>Contact Phone</mat-label>
+          <input matInput formControlName="contactPhone" />
+        </mat-form-field>
+
+        <mat-form-field appearance="outline" class="col-span-3">
+          <mat-label>Address</mat-label>
+          <input matInput formControlName="address" />
+        </mat-form-field>
+      </ng-container>
+
+        <!-- State -->
+      <mat-form-field appearance="outline" class="col-span-3">
+        <mat-label>State</mat-label>
+        <mat-select formControlName="stateId">
+          <mat-option *ngFor="let state of states" [value]="state.id">
+            {{ state.name }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+
+      <!-- City -->
+      <mat-form-field appearance="outline" class="col-span-3">
+        <mat-label>City</mat-label>
+        <mat-select formControlName="cityId">
+          <mat-option *ngFor="let city of cities" [value]="city.id">
+            {{ city.name }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+
+      <!-- Submit -->
+      <div class="col-span-3 flex justify-end">
+        <button mat-flat-button color="primary" type="submit">
+          {{ isEdit ? 'Update' : 'Create' }}
+        </button>
+      </div>
+    </form>
+  </div>
 </div>
