--- a/src/app/modules/admin/user/user-list/user-list.component.html
+++ b/src/app/modules/admin/user/user-list/user-list.component.html
@@ -6,9 +6,10 @@
   </button>
 
   <table mat-table [dataSource]="users" class="w-full mt-4 mat-elevation-z2">
+
     <!-- Full Name -->
     <ng-container matColumnDef="fullName">
-      <th mat-header-cell *matHeaderCellDef> Full Name </th>
+      <th mat-header-cell *matHeaderCellDef> Name </th>
       <td mat-cell *matCellDef="let user"> {{ user.fullName }} </td>
     </ng-container>
 
@@ -18,20 +19,34 @@
       <td mat-cell *matCellDef="let user"> {{ user.email }} </td>
     </ng-container>
 
+    <!-- Phone -->
+    <ng-container matColumnDef="phoneNumber">
+      <th mat-header-cell *matHeaderCellDef> Phone </th>
+      <td mat-cell *matCellDef="let user"> {{ user.phoneNumber }} </td>
+    </ng-container>
+
+    <!-- Address -->
+    <ng-container matColumnDef="BusinessName">
+      <th mat-header-cell *matHeaderCellDef> Business </th>
+      <td mat-cell *matCellDef="let user"> {{ user.businessName || '-' }} </td>
+    </ng-container>
+
     <!-- Roles -->
     <ng-container matColumnDef="roles">
       <th mat-header-cell *matHeaderCellDef> Roles </th>
-      <td mat-cell *matCellDef="let user"> {{ user.roles?.join(', ') }} </td>
+      <td mat-cell *matCellDef="let user">
+        {{ user.roles?.length ? user.roles.join(', ') : '-' }}
+      </td>
     </ng-container>
 
     <!-- Actions -->
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef class="text-right"> Actions </th>
       <td mat-cell *matCellDef="let user" class="text-right">
-        <button mat-stroked-button color="primary" [routerLink]="['/admin/users/edit', user.id]">
+        <button mat-stroked-button color="primary" (click)="editUser(user.id)">
           Edit
         </button>
-        <button mat-stroked-button color="warn" (click)="confirmDelete(user.id)">
+        <button mat-stroked-button color="warn" (click)="deleteUser(user.id)">
           Delete
         </button>
       </td>
