--- a/src/app/modules/admin/user/user-list/user-list.component.html
+++ b/src/app/modules/admin/user/user-list/user-list.component.html
@@ -26,18 +26,18 @@
     </ng-container>
 
     <!-- Address -->
-    <ng-container matColumnDef="BusinessName">
-      <th mat-header-cell *matHeaderCellDef> Business </th>
-      <td mat-cell *matCellDef="let user"> {{ user.businessName || '-' }} </td>
-    </ng-container>
+   <ng-container matColumnDef="businessName">
+    <th mat-header-cell *matHeaderCellDef> Business </th>
+    <td mat-cell *matCellDef="let user"> {{ user.businessName || '-' }} </td>
+  </ng-container>
 
     <!-- Roles -->
-    <ng-container matColumnDef="roles">
-      <th mat-header-cell *matHeaderCellDef> Roles </th>
-      <td mat-cell *matCellDef="let user">
-        {{ user.roles?.length ? user.roles.join(', ') : '-' }}
-      </td>
-    </ng-container>
+  <ng-container matColumnDef="role">
+    <th mat-header-cell *matHeaderCellDef> Roles </th>
+    <td mat-cell *matCellDef="let user">
+      {{ user.roles?.length ? user.roles.join(', ') : '-' }}
+    </td>
+  </ng-container>
 
     <!-- Actions -->
     <ng-container matColumnDef="actions">
@@ -48,6 +48,9 @@
         </button>
         <button mat-stroked-button color="warn" (click)="deleteUser(user.id)">
           Delete
+        </button>
+        <button mat-stroked-button color="accent" (click)="openResetPassword(user.id)">
+          Reset Password
         </button>
       </td>
     </ng-container>
