--- a/src/app/modules/admin/menus/menu-form/menu-form.component.html
+++ b/src/app/modules/admin/menus/menu-form/menu-form.component.html
@@ -1,29 +1,53 @@
-<!-- <div class="p-6">
-  <h2 class="text-2xl font-bold mb-4">{{ isEdit ? 'Edit Menu' : 'Create Menu' }}</h2>
+<h2 class="text-2xl font-bold mb-4">
+  {{ isEdit ? 'Ndrysho menu' : 'Krijo menu' }}
+</h2>
 
-  <form [formGroup]="form" (ngSubmit)="save()">
-    <mat-form-field class="w-full">
-      <mat-label>Title</mat-label>
-      <input matInput formControlName="title" />
-    </mat-form-field>
+<form [formGroup]="form" (ngSubmit)="save()" class="grid grid-cols-4 gap-4">
+  <mat-form-field appearance="outline">
+    <mat-label>Titulli*</mat-label>
+    <input matInput formControlName="title" />
+  </mat-form-field>
 
-    <mat-form-field class="w-full">
-      <mat-label>Route</mat-label>
-      <input matInput formControlName="route" />
-    </mat-form-field>
+  <mat-form-field appearance="outline">
+    <mat-label>Nëntitulli</mat-label>
+    <input matInput formControlName="subtitle" />
+  </mat-form-field>
 
-    <mat-form-field class="w-full">
-      <mat-label>Icon</mat-label>
-      <input matInput formControlName="icon" />
-    </mat-form-field>
+  <mat-form-field appearance="outline">
+    <mat-label>Lloji*</mat-label>
+    <input matInput formControlName="type" />
+  </mat-form-field>
 
-    <div class="mt-4">
-      <button mat-raised-button color="primary" type="submit">
-        Save
-      </button>
-      <button mat-button type="button" (click)="router.navigate(['/admin/menus'])">
-        Cancel
-      </button>
-    </div>
-  </form>
-</div> -->
+  <mat-form-field appearance="outline">
+    <mat-label>Numri i renditjes*</mat-label>
+    <input matInput type="number" formControlName="sortNumber" />
+  </mat-form-field>
+
+  <mat-form-field appearance="outline">
+    <mat-label>Ikona</mat-label>
+    <input matInput formControlName="icon" />
+  </mat-form-field>
+
+  <mat-form-field appearance="outline">
+    <mat-label>Url</mat-label>
+    <input matInput formControlName="link" />
+  </mat-form-field>
+
+<mat-form-field class="w-full">
+  <mat-label>Kërkesat</mat-label>
+  <mat-select formControlName="claim">
+    <mat-option *ngFor="let claim of claims" [value]="claim.value">
+      {{ claim.label }}
+    </mat-option>
+  </mat-select>
+</mat-form-field>
+
+
+  <mat-checkbox formControlName="hasSubMenu">Ka nënmeny</mat-checkbox>
+  <mat-checkbox formControlName="active">Aktiv</mat-checkbox>
+
+  <div class="col-span-4 text-right mt-6">
+    <button mat-flat-button color="primary" type="submit">Ruaj</button>
+    <button mat-stroked-button color="warn" routerLink="/admin/menus">Anulo</button>
+  </div>
+</form>
