Comit all changes from dpn

--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -45,4 +45,6 @@
 <!-- ----------------------------------------------------------------------------------------------------- -->
 <!-- Settings drawer - Remove this to remove the drawer and its button -->
 <!-- ----------------------------------------------------------------------------------------------------- -->
-<settings></settings>
+<settings class="settingsbuttton"></settings>
+
+
