--- a/src/app/layout/layout.component.scss
+++ b/src/app/layout/layout.component.scss
@@ -23,4 +23,9 @@ layout {
             width: 100%;
         }
     }
+
+    .settingsbuttton .lg\:right-16{ 
+        right: 0rem !important;
+        top: 56rem !important;     
+    }
 }
