--- a/src/app/modules/admin/menus/menu-form/menu-form.component.html
+++ b/src/app/modules/admin/menus/menu-form/menu-form.component.html
@@ -1,53 +1,58 @@
-<h2 class="text-2xl font-bold mb-4">
+<div class="p-6 w-full">
+
+ <h2 class="text-2xl font-bold mb-6">
   {{ isEdit ? 'Ndrysho menu' : 'Krijo menu' }}
 </h2>
 
 <form [formGroup]="form" (ngSubmit)="save()" class="grid grid-cols-4 gap-4">
-  <mat-form-field appearance="outline">
+
+  <mat-form-field appearance="outline" class="col-span-2">
     <mat-label>Titulli*</mat-label>
     <input matInput formControlName="title" />
   </mat-form-field>
 
-  <mat-form-field appearance="outline">
+  <mat-form-field appearance="outline" class="col-span-2">
     <mat-label>Nëntitulli</mat-label>
     <input matInput formControlName="subtitle" />
   </mat-form-field>
 
-  <mat-form-field appearance="outline">
+  <mat-form-field appearance="outline" class="col-span-2">
     <mat-label>Lloji*</mat-label>
     <input matInput formControlName="type" />
   </mat-form-field>
 
-  <mat-form-field appearance="outline">
+  <mat-form-field appearance="outline" class="col-span-2">
     <mat-label>Numri i renditjes*</mat-label>
     <input matInput type="number" formControlName="sortNumber" />
   </mat-form-field>
 
-  <mat-form-field appearance="outline">
+  <mat-form-field appearance="outline" class="col-span-2">
     <mat-label>Ikona</mat-label>
     <input matInput formControlName="icon" />
   </mat-form-field>
 
-  <mat-form-field appearance="outline">
+  <mat-form-field appearance="outline" class="col-span-2">
     <mat-label>Url</mat-label>
     <input matInput formControlName="link" />
   </mat-form-field>
 
-<mat-form-field class="w-full">
-  <mat-label>Kërkesat</mat-label>
-  <mat-select formControlName="claim">
-    <mat-option *ngFor="let claim of claims" [value]="claim.value">
-      {{ claim.label }}
-    </mat-option>
-  </mat-select>
-</mat-form-field>
-
+  <mat-form-field appearance="outline" class="col-span-4">
+    <mat-label>Kërkesat</mat-label>
+    <mat-select formControlName="claim">
+      <mat-option *ngFor="let claim of claims" [value]="claim.value">
+        {{ claim.label }}
+      </mat-option>
+    </mat-select>
+  </mat-form-field>
 
   <mat-checkbox formControlName="hasSubMenu">Ka nënmeny</mat-checkbox>
   <mat-checkbox formControlName="active">Aktiv</mat-checkbox>
 
-  <div class="col-span-4 text-right mt-6">
+  <div class="col-span-4 text-right mt-6 space-x-2">
     <button mat-flat-button color="primary" type="submit">Ruaj</button>
-    <button mat-stroked-button color="warn" routerLink="/admin/menus">Anulo</button>
+    <button mat-stroked-button color="warn" type="button" (click)="close()">Anulo</button>
   </div>
+
 </form>
+
+</div>
