--- a/src/app/modules/admin/roles/role-list.component.html
+++ b/src/app/modules/admin/roles/role-list.component.html
@@ -1,36 +1,49 @@
-<div class="p-6">
-  <h2 class="text-xl font-semibold mb-4">Roles</h2>
+<div class="flex flex-col flex-auto w-full p-6">
 
-  <button mat-flat-button color="primary" (click)="openCreateDialog()">
-    + Create Role
-  </button>
+    <!-- Title + Button -->
+    <div class="flex items-center justify-between mb-6">
+        <h2 class="text-xl font-semibold">Roles</h2>
 
-  <!-- Wrapper to make table full-width with Angular Material styling -->
-  <div class="mt-6 overflow-x-auto">
-    <table mat-table [dataSource]="roles" class="mat-elevation-z2 w-full">
-
-      <!-- Role Name Column -->
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef> Role Name </th>
-        <td mat-cell *matCellDef="let role"> {{ role.name }} </td>
-      </ng-container>
-
-      <!-- Actions Column -->
-      <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef class="text-right"> Actions </th>
-        <td mat-cell *matCellDef="let role" class="text-right">
-        <button mat-stroked-button color="primary" class="mr-2" (click)="openEditDialog(role)">
-          Edit
+        <button mat-flat-button color="primary" (click)="openCreateDialog()">
+            + Create Role
         </button>
-        <button mat-stroked-button color="warn" (click)="deleteRole(role.id)">
-          Delete
-        </button>
-      </td> 
-      </ng-container>
+    </div>
 
-      <!-- Header & Row definitions -->
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-    </table>
-  </div>
+    <!-- Full width table -->
+    <div class="w-full overflow-x-auto">
+        <table mat-table [dataSource]="roles" class="mat-elevation-z2 w-full">
+
+            <!-- Role Name Column -->
+            <ng-container matColumnDef="name">
+                <th mat-header-cell *matHeaderCellDef class="font-medium">Role Name</th>
+                <td mat-cell *matCellDef="let role">{{ role.name }}</td>
+            </ng-container>
+
+            <!-- Actions Column -->
+            <ng-container matColumnDef="actions">
+                <th mat-header-cell *matHeaderCellDef class="text-right font-medium">
+                    Actions
+                </th>
+                <td mat-cell *matCellDef="let role" class="text-right">
+
+                    <button mat-stroked-button color="primary" class="mr-2"
+                        (click)="openEditDialog(role)">
+                        Edit
+                    </button>
+
+                    <button mat-stroked-button color="warn"
+                        (click)="deleteRole(role.id)">
+                        Delete
+                    </button>
+
+                </td>
+            </ng-container>
+
+            <!-- Header & Row definitions -->
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+        </table>
+    </div>
+
 </div>
