Permisimi i modelit te rezervimit.

--- a/src/app/modules/admin/business-locations/business-location-modal.component.html
+++ b/src/app/modules/admin/business-locations/business-location-modal.component.html
@@ -2,7 +2,15 @@
   {{ data.isEdit ? 'Edit Location' : 'Add Location' }}
 </h2>
 
-<div mat-dialog-content [formGroup]="form">
+<div mat-dialog-content [formGroup]="form"> 
+    <mat-form-field class="w-full">
+        <mat-label>Business</mat-label>
+        <mat-select formControlName="businessId">
+            <mat-option *ngFor="let b of businesses" [value]="b.id">
+            {{ b.companyName  }}
+            </mat-option>
+        </mat-select>
+    </mat-form-field>
 
     <mat-form-field class="w-full">
         <mat-label>Name</mat-label>
