--- a/src/app/modules/admin/vehicle-inspections/inspection-list/inspection-list.component.html
+++ b/src/app/modules/admin/vehicle-inspections/inspection-list/inspection-list.component.html
@@ -2,13 +2,12 @@
 
     <!-- Header -->
     <div class="flex items-center justify-between mb-6 w-full">
-        <h1 class="text-2xl font-semibold">Vehicle Inspections</h1>
-
+        <h1 class="text-2xl font-semibold">Vehicle Inspections</h1> 
         <button
             mat-flat-button
             color="primary"
             class="px-6"
-            (click)="create(null)">
+            (click)="create()">
             <mat-icon class="mr-2">add</mat-icon>
             New Inspection
         </button>
